analysis/low-level-api-fir/testData/lazyResolve/errors/constructorDuplicatedContextParameter2.kt
// LANGUAGE: +ContextParameters
// IGNORE_FIR

class Foo {
    context(c: Int)
    context(c<caret>: String)
    constructor()
}